--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:theme="@style/Theme.CryptoTracker3">
         <activity
             android:name=".ui.news.NewsWebActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=""/>
         <activity
             android:name=".ui.settings.SettingsActivity"
             android:exported="true"
